# actix-web-redis-rpi

./: Cargo.toml  README.md
src/: main.rs
static/home_page/: home_page.html
