[package]
name = "actix-web-redis-rpi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
actix-web = "4"
redis = { version = "0.23.0", features = ["tokio-comp"] }
awc = { version = "3.0.0-beta.11", features = [ "openssl" ] }
